Make sure if you go portrait on your phone, it doesn’t go too big
* Reduce size of karaoke cues slightly for mobile

--- a/src/common/base.css
+++ b/src/common/base.css
@@ -32,7 +32,7 @@ body {
   height: 100%;
   cursor: default;
 
-  @media (max-width: 600px) {
+  @media (max-width: 740px) {
     padding: 20px;
   }
 }
