--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   text-align: left;
 
-  @media (max-width: 600px) {
+  @media (max-width: 740px) {
     font-size: 28px;
   }
 }
@@ -18,7 +18,7 @@
   margin-bottom: 50px;
   position: relative;
 
-  @media (max-width: 600px) {
+  @media (max-width: 740px) {
     width: 100%;
     margin-left: 0 !important;
     margin-right: 0 !important;
@@ -69,7 +69,7 @@
   -moz-column-gap: 50px;
   column-gap: 50px;
 
-  @media (max-width: 600px) {
+  @media (max-width: 740px) {
     padding-bottom: 20px;
     font-size: 20px;
     -webkit-column-count: 1;
